# cpp-RCP

./: .fusa-hara.json  .fusa-reqs.json  .fusa.json  .gitignore  AUDIT_PACK.md  CMakeLists.txt  CONTRIBUTING.md  CYBERSECURITY.md  FORMAL_VERIFICATION.md  HARA.md  INCIDENT-RESPONSE.md  LICENSE  README.md  ROADMAP.md  SAFETY_PLAN.md  SECURITY.md  TARA.md  artifact-manifest.json  coverage-report.json  do178-gap-report.json  fmea.csv  iec61508-gap-report.json  iso26262-gap-report.json  provenance.json  qualify-report.json  report.html  report.json  safety-case.json  safety-case.md  safety-case.mermaid  sas.json  sas.md  sbom.json  sci.json  tara.json  tara.md
.github/workflows/: ci.yml  dco.yml  release.yml
cli/: main.cpp
cmake/: FetchDeps.cmake
include/rcp/: adapt.hpp  admin.hpp  authz.hpp  canbr.hpp  capi.h  capi_impl.hpp  cli.hpp  config.hpp  ddsbr.hpp  deadline.hpp  doipbr.hpp  dyndata.hpp  e2e.hpp  faultinject.hpp  federation.hpp  firmware.hpp  grpcbridge.hpp  linbr.hpp  loan.hpp  mdns.hpp  mock.hpp  mqttbr.hpp  observe.hpp  powerstate.hpp  prioqueue.hpp  proxy.hpp  ratelimit.hpp  rcp.hpp  record.hpp  redundancy.hpp  restbridge.hpp  shmem.hpp  sim.hpp  someipbr.hpp  tls.hpp  tsn.hpp  udp.hpp  udsbr.hpp  version.hpp  watchdog.hpp  (+2 more)
include/relay/: relay.hpp
tests/: CMakeLists.txt  bench_mock.cpp  command_latency_test.cpp  test_admin.cpp  test_authz.cpp  test_canbr.cpp  test_capi.cpp  test_cli.cpp  test_config.cpp  test_ddsbr.cpp  test_deadline.cpp  test_doipbr.cpp  test_dyndata.cpp  test_e2e.cpp  test_faultinject.cpp  test_federation.cpp  test_firmware.cpp  test_grpcbridge.cpp  test_linbr.cpp  test_loan.cpp  test_mdns.cpp  test_mock.cpp  test_mqttbr.cpp  test_observe.cpp  test_powerstate.cpp  test_prioqueue.cpp  test_proxy.cpp  test_ratelimit.cpp  test_rcp.cpp  test_record.cpp  test_redundancy.cpp  test_relay.cpp  test_restbridge.cpp  test_shmem.cpp  test_sim.cpp  test_someipbr.cpp  test_tls.cpp  test_tsn.cpp  test_udsbr.cpp  test_watchdog.cpp  (+2 more)
tla/: AntiReplayGuard.tla  HealthStateMachine.tla  WatchdogProtocol.tla
tooling/: zone_manifest_schema.json
